fix overflow

--- a/client/src/stylesheets/_header.scss
+++ b/client/src/stylesheets/_header.scss
@@ -30,8 +30,8 @@
 
 .footer {
   padding: 1rem;
-  background-color: #343A40;
+  background-color: #343a40;
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
-  width: 100vw;
+  width: 100%;
 }
